ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-10-16 Benedikt Heintel
	- CONFIGS:
		* Added Mailsize function
	- DISTS:
		* Fixed #1594: (CentOS) More perl dependencies on CentOS
		* Fixed #1595: (CentOS) CentOS perl docs: Advice to autoconfigure first
	- DOCS:
		* Fixed #1483: Misleading information in INSTALL-files
	- ENGINE:
		* Fixed #1512: Subdomains for domain-aliases
		* Fixed #1509: New subdomain management system
	- GUI:
		* Fixed Order delete bug
		* Fixed #1507: Some errors on around "Execute Query" option on a database
		* Fixed #1511: e-mail aliases & autoreply
		* Fixed #1151: Update Hosting Package should only visible for a customer if a hosting plan to update is available (thanks Feg)
		* Fixed #1556: Special Characters like Umlauts (äüöÄÜÖ) and Ligatures (ß) in Javascript messages are encoded, wrongly.
	- TOOLS:
		* PHPmyAdmin 3.0.0

2008-09-11 Daniel Andreca
	- GUI:
		* Fixed #1151: Update Hosting Package should only visible for a customer if a hosting plan to update is available (thanks Feg)
	- CONFIGS:
		* Fixed #971: Why i can't set the IPs of a domain? (thanks Feg)
	- TOOLS:
		* Fixed #714: Undefined index in pma-style sheet (thanks Feg)
	- ENGINE:
		* Fixed #1080: Active web folders should not be deletable by customer
		* Fixed #1554: MySQL quota calculation (thanks Feg)

2008-09-10 Daniel Andreca
	- LANGUAGES:
		* Updated Hungarian (thanks Attila Fulop)
		* Updated Dutch (thanks mata)

2008-09-05 Daniel Andreca
	- LANGUAGES:
		* Fixed #1552: Updated Czech

2008-09-04 Daniel Andreca
	- ENGINE:
		* Fixed #1229: On domain creation groupadd / useradd fails when pre-existent accounts are found leaving the domain in error state

2008-09-30 Daniel Andreca
	- TOOLS:
		* Updated: PHPmyAdmin to 2.11.9.2
	- ENGINE:
		* Fixed #1479: Use cmp instead of diff (at least for the logs) (thanks aseques)
	- LANGUAGES:
		* Updated German (thanks Haeber)

2008-09-24 Daniel Andreca
	- GUI:
		* Fixed #1544: Add SQL user has only one option -> useless